--- a/magical-cards.html
+++ b/magical-cards.html
@@ -6,11 +6,13 @@
         <link rel="stylesheet" href="./rsc/css/cards.css">
     </head>
     <body>
-        <div>
-            <ul>
-                <li><img src="rsc/other/Playing Cards/SVG-cards-1.3/10_of_clubs.svg" alt="1st card"></li>
-                <li><img src="rsc/other/Playing Cards/SVG-cards-1.3/10_of_clubs.svg" alt="2nd card"></li>
-                <li><img src="rsc/other/Playing Cards/SVG-cards-1.3/10_of_clubs.svg" alt="3rd card"></li>
+        <div class="cards-container">
+            <ul class="cards">
+                <li><img src="rsc/other/Playing Cards/PNG-cards-1.3/10_of_clubs.png" alt="1st card"></li>
+                <li><img src="rsc/other/Playing Cards/PNG-cards-1.3/10_of_clubs.png" alt="2nd card"></li>
+                <li><img src="rsc/other/Playing Cards/PNG-cards-1.3/10_of_clubs.png" alt="3rd card"></li>
+                <li><img src="rsc/other/Playing Cards/PNG-cards-1.3/10_of_clubs.png" alt="4th card"></li>
+                <li><img src="rsc/other/Playing Cards/PNG-cards-1.3/10_of_clubs.png" alt="5th card"></li>
             </ul>
         </div>
     </body>
